# BaldDetection

./: README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: dataset.yaml
configs/model/: model.yaml
configs/training/: training.yaml
models/: resnet50.py
scripts/: train.py
src/: celeba_dataset.py
